# trimcp

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: cache.rs  clients.rs  cmd_knowledge.rs  cmd_stats.rs  code_context.rs  compress.rs  config.rs  error.rs  knowledge.rs  lib.rs  main.rs  metrics.rs  protocol.rs  proxy.rs  setup.rs  stats_store.rs  status.rs  transport.rs
