[package]
name = "rustkit-mcp"
version = "0.1.0"
edition = "2024"
description = "MCP proxy that reduces LLM token costs by 60–90% through compression and caching"
license = "MIT"
repository = "https://github.com/rustkit-ai/rustkit-mcp"
homepage = "https://github.com/rustkit-ai/rustkit-mcp"
documentation = "https://docs.rs/rustkit-mcp"
readme = "README.md"
keywords = ["mcp", "llm", "proxy", "token", "compression"]
categories = ["command-line-utilities", "network-programming"]
exclude = ["backlog/", ".claude/"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
