[package]
name = "trimcp"
version = "0.1.0"
edition = "2024"
description = "MCP proxy that reduces LLM token costs by 60–90% through compression and caching"
license = "MIT"
repository = "https://github.com/rustkit-ai/trimcp"
homepage = "https://github.com/rustkit-ai/trimcp"
documentation = "https://docs.rs/trimcp"
readme = "README.md"
keywords = ["mcp", "llm", "proxy", "token", "compression"]
categories = ["command-line-utilities", "network-programming"]
exclude = ["backlog/", ".claude/"]

[dependencies]
rustkit-semantic = { path = "../rustkit-semantic" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
colored = "2"

[dev-dependencies]
tempfile = "3"
