[package]
name = "trimcp"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "MCP proxy that reduces LLM token costs by 60–90% through compression and caching"
license = "MIT"
repository = "https://github.com/rustkit-ai/trimcp"
homepage = "https://github.com/rustkit-ai/trimcp"
documentation = "https://docs.rs/trimcp"
readme = "README.md"
keywords = ["mcp", "llm", "proxy", "token", "compression"]
categories = ["command-line-utilities", "network-programming"]
exclude = ["backlog/", ".claude/"]

[lib]
name = "trimcp"
path = "src/lib.rs"

[[bin]]
name = "trimcp"
path = "src/main.rs"

[features]
# Enable semtree code-context injection (tree-sitter + fastembed + usearch).
# Without this feature, trimcp is a lightweight MCP proxy with no ML dependencies.
semtree = ["dep:semtree-core", "dep:semtree-embed", "dep:semtree-store", "dep:semtree-rag"]

[dependencies]
semstore = { version = "0.1" }
semtree-core  = { version = "0.1", optional = true }
semtree-embed = { version = "0.1", optional = true }
semtree-store = { version = "0.1", optional = true }
semtree-rag   = { version = "0.1", optional = true }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
colored = "2"

[dev-dependencies]
tempfile = "3"

# ── Local development overrides ───────────────────────────────────────────────
# Remove or comment out before publishing to crates.io.
[patch.crates-io]
semstore = { path = "../rustkit-semantic" }
semtree-core  = { path = "../semtree/crates/semtree-core" }
semtree-embed = { path = "../semtree/crates/semtree-embed" }
semtree-store = { path = "../semtree/crates/semtree-store" }
semtree-rag   = { path = "../semtree/crates/semtree-rag" }
